==> aabzel/trunk/source/mcal/mcal_at32f4/i2c/i2c_drv.c <==
#include "i2c_drv.h"
#include <stdbool.h>
#include <string.h>
#include "debug_info.h"
#include "hal_diag.h"
#include "i2c_types.h"
#include "log.h"
#include "at32f435_437.h"
#include "time_mcal.h"

bool i2c_init_ll(uint8_t num) {
    bool res = true;
    LOG_WARNING(I2C, "I2C%u Init ", num);
    I2C_TypeDef* I2Cx = NULL;
    I2cHandle_t* Node = I2cGetNode(num);
    const I2cConfig_t* Config = NULL;
    HAL_StatusTypeDef ret = HAL_ERROR;
    if(Node) {
        I2Cx = i2c_get_instance(num);
        if(I2Cx) {
            Config = I2cGetConfig(num);
            if(Config) {
                res = true;
            } else {
                LOG_ERROR(I2C, "ConfigErr");
                res = false;
            }
        } else {
            LOG_ERROR(I2C, "InstanceErr");
            res = false;
        }
    } else {
        LOG_ERROR(I2C, "HandleErr");
        res = false;
    }

    if(res) {
        Node->i2c_h.Instance = I2Cx;
        /*TODO add clock speed check*/
        Node->i2c_h.Init.ClockSpeed = Config->clock_speed;
        Node->i2c_h.Init.DutyCycle = I2C_DUTYCYCLE_2;
        Node->i2c_h.Init.OwnAddress1 = 0;
        Node->i2c_h.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
        Node->i2c_h.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
        Node->i2c_h.Init.OwnAddress2 = 0;
        Node->i2c_h.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
        Node->i2c_h.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;

        ret = HAL_I2C_Init((I2C_HandleTypeDef*)&Node->i2c_h);
        if(HAL_OK == ret) {
            res = true;
            LOG_INFO(I2C, "%u Init " LOG_OK, num);
            Node->init_done = true;
        } else {
            LOG_ERROR(I2C, "%u Init" LOG_ER " %s", num, HalStatus2Str(ret));
            res = false;
        }
    } else {
        LOG_ERROR(I2C, "%u Conf " LOG_ER, num);
    }
    return res;
}

bool i2c_api_write(uint8_t num, uint8_t chip_addr, const uint8_t* const array, size_t size) {
    bool res = false;
    uint8_t i2c_addr = chip_addr;
    i2c_addr = i2c_compose_write_address(chip_addr);
    LOG_DEBUG(I2C, "%u Write Chip:0x%x Len: %u", num, i2c_addr, size);
    HAL_StatusTypeDef ret;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node && array && (0 < size)) {
        uint32_t init_tx_cnt = Node->tx_cnt;
        Node->tx_int = false;
        ret = HAL_I2C_Master_Transmit_IT((I2C_HandleTypeDef*)&Node->i2c_h, (uint16_t)i2c_addr, array, size);
        if(HAL_OK == ret) {
            res = true;
            uint32_t cnt = 0;
            while(init_tx_cnt == Node->tx_cnt) {
                cnt++;
                if(0x0027ffff < cnt) {
                    res = false;
                    break;
                }
            }
        } else {
            res = false;
            LOG_ERROR(I2C, "I2C%u TxErr %u=%s", num, ret, HalStatus2Str(ret));
            i2c_init_ll(num);
        }
    }
    return res;
}

bool i2c_api_read(uint8_t num, uint8_t chip_addr, uint8_t* array, uint32_t size) {
    bool res = false;
    uint8_t i2c_addr = chip_addr;
    i2c_addr = i2c_compose_read_address(chip_addr);
    LOG_DEBUG(I2C, "%u Read Chip:0x%x Len: %u", num, i2c_addr, size);
    HAL_StatusTypeDef ret;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        Node->rx_int = false;
        ret = HAL_I2C_Master_Receive_IT(&Node->i2c_h, (uint16_t)i2c_addr, array, (uint16_t)size);
        if(HAL_OK == ret) {
            res = true;

            uint32_t diff = 0;
            res = I2cWaitRxDoneTimeOut(Node,3000, &diff);

            if(res) {
                LOG_DEBUG(I2C, "I2C%u ReadOk", num);
            } else {
                LOG_ERROR(I2C, "I2C%u ReadTimeOut", num);
            }

        } else {
            LOG_ERROR(I2C, "I2C%u, RxErr %u=%s", num, ret, HalStatus2Str(ret));
            i2c_init_ll(num);
        }
    }else {
        LOG_ERROR(I2C, "Node" LOG_ER);
    }
    return res;
}

bool i2c_api_read_byte(uint8_t num, uint8_t chip_addr, uint8_t addr, uint8_t* value) {
    bool res = false;
    uint8_t i2c_addr = chip_addr;
    i2c_addr = i2c_compose_read_address(chip_addr);
    LOG_DEBUG(I2C, "I2C%u Read, Chip 0x%x, Reg 0x%x", num, chip_addr, addr);
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        // uint32_t init_rx_cnt = Node->rx_cnt;
        HAL_StatusTypeDef ret = 0;
        Node->rx_int = false;
        ret = HAL_I2C_Mem_Read_IT(&Node->i2c_h, (uint16_t)i2c_addr, addr, 1, value, 1);
        if(HAL_OK == ret) {

            res = true;
            uint32_t cnt = 0;
            while(false == Node->rx_int) {
                cnt++;
                if(0x001FFFFF < cnt) {
                    res = false;
                    break;
                }
            }
            if(res) {
                LOG_DEBUG(I2C, "I2C%u MemReadOk", num);
            }

        } else {
            LOG_ERROR(I2C, "I2C%u RegReadErr %s, RegAddr:0x%04x", num, HalStatus2Str(ret), (uint16_t)addr);
            i2c_init_ll(num);
            res = false;
        }
    }
    return res;
}

bool i2c_check_addr(uint8_t num, uint8_t i2c_addr) {
    bool res = false;
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        res = i2c_master_check_addr(&Node->i2c_h, i2c_addr);
    }
    return res;
}

bool i2c_api_read_mem(uint8_t num, uint8_t chip_addr, uint8_t* const addr, size_t addr_size, uint8_t* const data,
                      size_t size) {
    bool res = false;
    uint8_t i2c_addr = chip_addr;
    i2c_addr = i2c_compose_read_address(chip_addr);
    LOG_DEBUG(I2C, "I2C%u ReadMem,Chip:0x%x,Reg:0x%02x=0x%04x,AdrSize:%u Byte,DataToRx:%u Byte", num, chip_addr, *addr,
              (uint16_t)*addr, addr_size, size);
    I2cHandle_t* Node = I2cGetNode(num);
    if(Node) {
        // uint32_t init_rx_cnt = Node->rx_cnt;
        HAL_StatusTypeDef ret = 0;
        Node->rx_int = false;
        uint16_t addr_u16 = RegAddr2Word(addr, addr_size);
        ret = HAL_I2C_Mem_Read_IT(&Node->i2c_h, (uint16_t)i2c_addr, addr_u16, addr_size, data, size);
        if(HAL_OK == ret) {
            res = true;
            uint32_t diff = 0;
            uint32_t start = time_get_ms32();
            while(1) {
                uint32_t cur = time_get_ms32();
                diff = cur - start;
                if(3000 < diff) {
                    res = false;
                    break;
                }

                if(Node->rx_int) {
                    break;
                    res = true;
                }
            }
            if(res) {
                LOG_DEBUG(I2C, "I2C%u MemReadOk,waited:%ums", num,diff);
            } else {
                LOG_ERROR(I2C, "I2C%u MemReadTimeOut", num);
            }
        } else {
            LOG_ERROR(I2C, "I2C%u MemReadErr %u=%s", num, ret, HalStatus2Str(ret));
            i2c_init_ll(num);
            res = false;
        }
    } else {
        LOG_ERROR(I2C, "I2C%u NodeErr", num);
    }
    return res;
}
